--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>MP2 Starter</title>
-  <script src="./lib/angular/angular.min.js"></script>
-  <script src="./js/controllers.js"></script>
+  <title>Community</title>
+
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.4.1/slick.css"/>
   <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Raleway:900' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="./foundation/css/foundation.css">
@@ -28,9 +28,9 @@
 	  <section class="top-bar-section">
 	    <!-- Left Nav Section -->
 	    <ul class="right">
-	      <li><a href="https://courses.engr.illinois.edu/cs498rk1/index.html">Seasons</a></li>
-        <li><a href="https://courses.engr.illinois.edu/cs498rk1/index.html">Characters</a></li>
-        <li><a href="https://courses.engr.illinois.edu/cs498rk1/index.html">Social</a></li>
+	      <li><a href="https://courses.engr.illinois.edu/cs498rk1/index.html" id="a-seasons">Seasons</a></li>
+        <li><a href="https://courses.engr.illinois.edu/cs498rk1/index.html" id="a-characters">Characters</a></li>
+        <li><a href="https://courses.engr.illinois.edu/cs498rk1/index.html" id="a-social">Social</a></li>
 	    </ul>
 	  </section>
 	</nav>
@@ -41,27 +41,175 @@
     </div>
   </div>
 
-  <div class="full-row">
+  <div id="seasons">
     <div class="half-row">
-      <div class="large-4 columns" id="season1"><h2>Season One</h2></div>
-      <div class="large-4 columns" id="season2"><h2>Season One</h2></div>
-      <div class="large-4 columns" id="season3"><h2>Season One</h2></div>
+      <div class="large-4 columns seasons" id="season-one">
+        <div class="background"></div>
+        <div class="foreground"><h2>Season One</h2><h3>Repilot</h3></div>
+      </div>
+      <div class="large-4 columns seasons" id="season-two">
+        <div class="background"></div>
+        <div class="foreground"><h2>Season Two</h2><h3>Repilot</h3></div>
+      </div>
+      <div class="large-4 columns seasons" id="season-three">
+        <div class="background"></div>
+        <div class="foreground"><h2>Season Three</h2><h3>Repilot</h3></div>
+      </div>
     </div>
     <div class="half-row">
-      <div class="large-4 columns" id="season1"><h2>Season One</h2></div>
-      <div class="large-4 columns" id="season1"><h2>Season One</h2></div>
-      <div class="large-4 columns" id="season1"><h2>Season One</h2></div>
+      <div class="large-4 columns seasons" id="season-four">
+        <div class="background"></div>
+        <div class="foreground"><h2>Season Four</h2><h3>Repilot</h3></div>
+      </div>
+      <div class="large-4 columns seasons" id="season-five">
+        <div class="background"></div>
+        <div class="foreground"><h2>Season Five</h2><h3>Repilot</h3></div>
+      </div>
+      <div class="large-4 columns seasons" id="season-six">
+        <div class="background"></div>
+        <div class="foreground"><h2>Season Six</h2><h3>Repilot</h3></div>
+      </div>
     </div>
   </div>
 
-  <div class="full-row">
+  <div class="full-row" id="characters">
+    <i class="fa fa-chevron-left" id="carousel-left"></i>
+    <i class="fa fa-chevron-right" id="carousel-right"></i>
+
+    <div class="carousel">
+      <div class="character">
+        <image src="./data/mp1_assets/jeff-cut2.png"></image>
+        <div class="info">
+          <h2>Jeff Winger</h2>
+          <h4>AKA Tinkle Town, Hot Wings</h4>
+          <h4>Kryptonite: Women's Tears</h4>
+          <p>Jeffrey Tobias "Jeff" Winger (played by Joel McHale) is
+            a graduate of Greendale Community College who was once
+            a practicing attorney. He was born in Denver, Colorado
+            to his parents William Winger and Doreen Winger née Fitzgerald.</p>
+        </div>
+      </div>
+      <div class="character">
+        <image src="./data/mp1_assets/britta-cut.png"></image>
+        <div class="info">
+          <h2>Britta Perry</h2>
+          <h4>AKA The Worst</h4>
+          <h4>Owner: IPod Nano</h4>
+          <p>Britta Perry is a graduate of Greendale Community College.
+             She was born in Riverside, Colorado in October 1980 to George
+              and Deb Perry. Britta has two older brothers, one of whom works
+               with children with some type of special disorder in a hospital.</p>
+        </div>
+      </div>
+      <div class="character">
+        <image src="./data/mp1_assets/abed-cut.png"></image>
+        <div class="info">
+          <h2>Abed Nadir</h2>
+          <h4>AKA Batman, Brown Jamie Lee Curtis</h4>
+          <h4>Porn Star Name: Henry David Thoreau Diet Squirt</h4>
+          <p>Abed Nadir (portrayed by Danny Pudi) is a graduate of
+            Greendale Community College. Abed had a difficult life
+            growing up, due in part to his parents. His father is a
+            Palestinian from Gaza and his mother Polish American,
+            which was a source of cultural discord. Abed has an
+             undiagnosed psychological condition which makes it hard
+              for him to understand people.</p>
+        </div>
+      </div>
+      <div class="character">
+        <image src="./data/mp1_assets/troy-cut.png"></image>
+        <div class="info">
+          <h2>Troy Barnes</h2>
+          <h4>AKA T-Bone, Butt Soup</h4>
+          <h4>Favorite Football Player: Troy Barnes</h4>
+          <p>Troy Barnes (played by Donald Glover) is a graduate from both
+             Riverside High School and Greendale Community College.
+              A popular figure at Riverside, Troy was the star quarterback
+               of the football team and also the prom king. His many admirers
+                at school included his fellow classmate Annie Edison who
+                 would later join him at Greendale and become his roommate.</p>
+        </div>
+      </div>
+      <div class="character">
+        <image src="./data/mp1_assets/pierce-cut.png"></image>
+        <div class="info">
+          <h2>Pierce Hawthorne</h2>
+          <h4>CEO Hawthorne Wipes</h4>
+          <h4>Kryptonite: Falling asleep in sunbeams</h4>
+          <p>Piercinald Anastasia "Pierce" Hawthorne
+            (portrayed by Chevy Chase) was a former
+            moist towelette tycoon who was at one time
+            the C.E.O of "Hawthorne Wipes". It was
+            a company founded by his father, Cornelius
+            Hawthorne which afforded Pierce a leisurely
+            lifestyle free of worries. In his younger
+            years he lived it up, marrying seven times
+            and accumulating over thirty step-children.</p>
+        </div>
+      </div>
+      <div class="character">
+        <image src="./data/mp1_assets/shirley-cut.png"></image>
+        <div class="info">
+          <h2>Shirley Bennett</h2>
+          <h4>AKA Big Cheddar</h4>
+          <h4>Owner, Shirley's Sandwiches</h4>
+          <p>Shirley Bennett (played by Yvette Nicole Brown) is a graduate of Greendale
+            Community College and also the proprietor of the campus
+             eatery "Shirley's Sandwiches". She enrolled not long
+              after her divorce from her husband Andre who had left
+               her and their children for a stripper named Mysti.</p>
+        </div>
+      </div>
+      <div class="character">
+        <image src="./data/mp1_assets/annie-cut.png"></image>
+        <div class="info">
+          <h2>Annie Edison</h2>
+          <h4>AKA Little Annie Adderall, Psycho</h4>
+          <h4>Rehab Clinic Voted Most Likely to Succeed</h4>
+          <p>Annie Edison (portrayed by Alison Brie) is
+            a graduate of Greendale Community College.
+            She is the daughter of a Jewish mother and
+            an Episcopalian father. Her parents divorced
+            and she, along with her brother Anthony,
+            were raised by their mother.</p>
+        </div>
+      </div>
+    </div>
+
+
   </div>
 
-  <footer class="full-row">
+  <footer class="full-row" id="social">
+    <h2>Join the #Community</h2>
+
+    <div class="social-row">
+        <div class="icon-row">
+
+          <div class="icon-center">
+            <div class="icon-wrapper">
+              <i class="fa fa-facebook"></i>
+            </div>
+            <div class="icon-wrapper">
+              <i class="fa fa-yahoo"></i>
+            </div>
+            <div class="icon-wrapper">
+              <i class="fa fa-twitter"></i>
+            </div>
+            <div class="icon-wrapper">
+              <i class="fa fa-reddit"></i>
+            </div>
+          </div>
+
+        </div>
+        <div class="yahoo-row">
+          <p>A </p><image src="./data/mp1_assets/yahoo.png"></image><p> Original Series</p>
+        </div>
+      </div>
   </div>
 
-  <script src="./js/script.js"></script>
   <script src="./lib/jquery-2.1.3.min/index.js"></script>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.4.1/slick.min.js"></script>
+  <script src="./js/script.js"></script>
   <script src="./foundation/js/foundation.min.js"></script>
   <script src="http://localhost:35729/livereload.js"></script>
 </body>
