--- a/public/imdb250.html
+++ b/public/imdb250.html
@@ -1,12 +1,16 @@
 <!doctype html>
-<html ng-app="imdbApp">
-  <head>
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-  </head>
+<html lang="en" ng-app="imdbApp">
+<head>
 
-  <body>
-  </body>
+  <script src="lib/angular/angular.js"></script>
+  <script src="lib/angular-route/angular-route.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/services.js"></script>
+  <script src="js/controllers.js"></script>
+</head>
+<body>
+
+  <div ng-view></div>
+
+</body>
 </html>
