--- a/public/imdb250.html
+++ b/public/imdb250.html
@@ -1,16 +1,38 @@
 <!doctype html>
 <html lang="en" ng-app="imdbApp">
-<head>
+  <head>
+    <link rel="stylesheet" href="./foundation/css/foundation.css">
+    <link rel="stylesheet" href="./css/imdbstyles.css">
+  </head>
+  <body>
 
-  <script src="lib/angular/angular.js"></script>
-  <script src="lib/angular-route/angular-route.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/services.js"></script>
-  <script src="js/controllers.js"></script>
-</head>
-<body>
+    <nav class="top-bar" data-topbar role="navigation">
+      <ul class="title-area">
+        <li class="name">
+          <h1><a href="#">IMDB Y'All</a></h1>
+        </li>
+         <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+        <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+      </ul>
 
-  <div ng-view></div>
+      <section class="top-bar-section">
+        <!-- Right Nav Section -->
+        <ul class="right">
+          <li><a href="#/list">Search</a></li>
+          <li><a href="#/gallery">Gallery</a></li>
+        </ul>
+      </section>
+    </nav>
 
-</body>
+    <div ng-view></div>
+
+
+
+    <script src="lib/angular/angular.js"></script>
+    <script src="lib/angular-route/angular-route.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/services.js"></script>
+    <script src="js/controllers.js"></script>
+
+  </body>
 </html>
