--- a/public/imdb250.html
+++ b/public/imdb250.html
@@ -24,9 +24,9 @@
       </section>
     </nav>
 
-    <div ng-view></div>
-
-
+    <div class="content">
+      <div ng-view></div>
+    </div>
 
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
