--- a/public/index.html
+++ b/public/index.html
@@ -61,21 +61,21 @@
     <div class="half-row">
       <div class="large-4 columns seasons" id="season-one">
         <div class="background"></div>
-        <div class="foreground"><h2>Season One</h2><h3>Repilot</h3></div>
+        <div class="foreground"><h2>Season One</h2><h3>Freshman Year</h3></div>
       </div>
       <div class="large-4 columns seasons" id="season-two">
         <div class="background"></div>
-        <div class="foreground"><h2>Season Two</h2><h3>Repilot</h3></div>
+        <div class="foreground"><h2>Season Two</h2><h3>Paintball Redux</h3></div>
       </div>
       <div class="large-4 columns seasons" id="season-three">
         <div class="background"></div>
-        <div class="foreground"><h2>Season Three</h2><h3>Repilot</h3></div>
+        <div class="foreground"><h2>Season Three</h2><h3>The Darkest Timeline</h3></div>
       </div>
     </div>
     <div class="half-row">
       <div class="large-4 columns seasons" id="season-four">
         <div class="background"></div>
-        <div class="foreground"><h2>Season Four</h2><h3>Repilot</h3></div>
+        <div class="foreground"><h2>Season Four</h2><h3>The Gas Leak Year</h3></div>
       </div>
       <div class="large-4 columns seasons" id="season-five">
         <div class="background"></div>
@@ -83,7 +83,7 @@
       </div>
       <div class="large-4 columns seasons" id="season-six">
         <div class="background"></div>
-        <div class="foreground"><h2>Season Six</h2><h3>Repilot</h3></div>
+        <div class="foreground"><h2>Season Six</h2><h3>Yahoo Screen?</h3></div>
       </div>
     </div>
   </div>
